hphp/hack/test/typecheck/typing_function2.php.exp
File "typing_function2.php", line 19, characters 13-18:
String argument to `fun()` contains `:`; for static class methods, use `class_meth(Cls::class, 'method_name')`, not `fun('Cls::method_name')` (Naming[2027])
